@@ -553,7 +553,7 @@ Keymaps::
 Valid keymaps are: *main*, *diff*, *log*, *help*, *pager*, *status*, *stage*,
 *tree*, *blob*, *blame*, *refs*, *stash*, *grep* and *generic*. Use *generic*
 to set key mapping in all keymaps. Use *search* to define keys for navigating
-search results during search.
+search results during incremental search and in the file finder.
 
 Key values::
 
